start with admin panel

--- a/test.html
+++ b/test.html
@@ -42,19 +42,11 @@
                 <table class="boxtable">
                     <tr>
                         <td>Name</td>
-                        <td>Username</td>
-                        <td>EMail</td>
-                        <td>Registered</td>
-                        <td>Last Login</td>
-                        <td>Action</td>
+                        <td>Marcel Hering</td>
                     </tr>
                     <tr>
-                        <td>Name</td>
-                        <td>Username</td>
                         <td>EMail</td>
-                        <td>Registered</td>
-                        <td>Last Login</td>
-                        <td>Action</td>
+                        <td>Username</td>
                     </tr>
                 </table>
             </div>
